fixed UCI specification for moves after start pos